<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Time"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TimeInt"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Correct"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CorrectInt"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/WrongAnswer"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/WrongAnswerInt"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfo">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="28dp"
            android:background="@drawable/text_view_question"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/purple"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewA"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/text_view_question"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewB"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/text_view_question"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewC"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/text_view_question"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewD"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/text_view_question"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/Finish"
                android:textColor="@color/purple"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/Next"
                android:textColor="@color/purple"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarQuiz"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>